day27/default-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  namespace: ingress-lab        # same namespace as the Ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-backend
  template:
    metadata:
      labels:
        app: default-backend
    spec:
      containers:
      - name: default-backend
        image: hashicorp/http-echo:latest
        args:
        - "-text=404 - Page Not Found. Please check the URL."
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: default-backend-svc
  namespace: ingress-lab        # same namespace as the Ingress
spec:
  selector:
    app: default-backend
  ports:
  - port: 80
    targetPort: 5678
